--- a/api/composer.json
+++ b/api/composer.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "ext-pdo": "*",
         "ext-curl": "*",
+        "ext-pdo": "*",
         "ext-simplexml": "*",
         "cviebrock/eloquent-sluggable": "^10.0",
         "cviebrock/laravel-elasticsearch": "^10.0",
@@ -17,6 +17,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "phpoffice/phpspreadsheet": "^1.28",
         "predis/predis": "^2.0",
         "psr/simple-cache": "^3.0"
