--- a/panel/package.json
+++ b/panel/package.json
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@ant-design/icons": "^5.5.1"
   }
 }
